A couple of last fixes: language for super campers, and fix the height of select boxes on Firefox.

--- a/tcamp/static/styles/app.scss
+++ b/tcamp/static/styles/app.scss
@@ -2008,6 +2008,12 @@ table.wall-table {
                 margin: 0 10px;
             }
         }
+
+        form {
+            select {
+                height: 37px;
+            }
+        }
     }
 
     .event-info {
